--- a/dissertation.sty
+++ b/dissertation.sty
@@ -371,7 +371,7 @@
 \\\optionalwithnewsgott{\large Disserta\c{c}\~{a}o de Mestrado}
 \\\optionalwithnewsgott{\large Mestrado Integrado em \@masterdegree}
 \\\rule{0pt}{6mm}
-\\\optionalwithnewsgott{\large Trabalho efectuado sob orienta\c{c}\~{a}o de}
+\\\optionalwithnewsgott{\large Trabalho realizado sob a orienta\c{c}\~{a}o do Professor}
 \\\optionalwithboldnewsgott{\@supervisor}\rule{0pt}{4mm}
 \\\optionalwithboldnewsgott{\@cosupervisor}
 \\\rule{0pt}{2cm}
