--- a/dissertation.tex
+++ b/dissertation.tex
@@ -23,6 +23,11 @@
 \usepackage{indentfirst}
 \usepackage{listings}
 \usepackage{color}
+\usepackage[
+    type={CC},
+    modifier={by},
+    version={4.0},
+]{doclicense}
 
 % ACRONYMS -----------------------------------------------------
 
@@ -77,7 +82,7 @@
 \author{Octávio José Azevedo Maia}
 
 % Supervisor(s)
-\supervisor{Professor José Carlos Ramalho}
+\supervisor{José Carlos Ramalho}
 %\cosupervisor{The cosupervisor of the thesis}
 
 % University (uncomment if you need to change default values)
@@ -108,13 +113,13 @@
 	\umtitlepage
 	
 	% Anexo 3 ------------------------------------------
-    %\input{0_anexo3.tex}
+    \input{sections/0_anexo3.tex}
 	
 	% Add acknowledgements -----------------------------
     %\input{0_acknowledgements.tex}
 
     % Anexo 4 ------------------------------------------
-    %\input{0_anexo4.tex}
+    \input{sections/0_anexo4.tex}
 
 	% Resumo ------------------------
 	\cleardoublepage
