--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,5 +1,8 @@
 \chapter*{Abstract}
 
+\large{CLAV: Authentication and integration on the iAP platform}
+\vspace{5mm}
+
 There's a ever growing worry about the quantity of information that's generated and received by multiple institutions. Not only related to the excessive ammount of paper consumed, but as well as the management of such big quantities of information.
 
 With the purpose of simplifying the process of managing such documents, the portuguese government has been developing various strategies. Namely, in the Public Administration, with directives provided by the European Comission.
@@ -9,4 +12,4 @@ The \gls{clav} project comes up as one of those strategies. This allows to class
 This dissertation has as its primary objective, the integration of the services provided by the \emph{Autenticação.Gov} platform in the \gls{clav} project, as well as the creation of appropriate strategies of user management, authentication of requests refering to the public API, as well as  backend authentication and overall security.
 
 \vspace{5cm}
-\keywords{CLAV, Autenticação.Gov, Authentication, Security}
+\keywords{Autenticação.Gov, Authentication, CLAV, Security}
