--- a/sections/0_resumo.tex
+++ b/sections/0_resumo.tex
@@ -1,5 +1,8 @@
 \chapter*{Resumo}
 
+\large{CLAV: Autenticação e integração na plataforma iAP}
+\vspace{5mm}
+
 Existe uma preocupação cada vez maior em relação à quantidade de informação gerada e recebida por diversas instituições. Não só no que toca ao consumo excessivo de papel, como também a gestão de grandes quantidades de informação.
 
 Com o intuito de simplificar a gestão documental, o governo tem desenvolvido diversas estratégias. Nomeadamente, na \gls{ap}, com base em normas e orientações provenientes da Comissão Europeia.
@@ -9,4 +12,4 @@ O \gls{clav}, surge como uma dessas estratégias. Este visa a classificação e 
 Esta dissertação tem como objetivo primário, a integração dos serviços da plataforma \emph{Autenticação.Gov} no \gls{clav}, bem como a criação de estratégias apropriadas de gestão de utilizadores, autenticação de pedidos referentes à \emph{API} pública disponibilizada, autenticação no backend e segurança da aplicação.
 
 \vspace{5cm}
-\keywords{CLAV, Autenticação.Gov, Autenticação, Segurança}
+\keywords{Autenticação.Gov, Autenticação, CLAV, Segurança}
