Correção de gralhas

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -17,7 +17,7 @@
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
 \setcounter{secnumdepth}{3}
-\setcounter{tocdepth}{3}
+%\setcounter{tocdepth}{3}
 \usepackage{pgfplots}
 \usepackage{csquotes}
 \usepackage{indentfirst}
