--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -53,3 +53,4 @@
 \newacronym{mac}{MAC}{Message Authentication Code}
 \newacronym{pkcs}{PKCS}{Public-Key Cryptography Standards}
 \newacronym{cap}{CAP}{Chip Authentication Program}
+\newacronym{cors}{CORS}{Cross-Origin Resource Sharing}
